testathon bug fixes
Fix for application scrollbar
Fix masthead menus to close on toggle
Fix --pf-v5-global--FontFamily--sans-serif font
Fix operator hub card display issues

--- a/frontend/packages/console-shared/src/components/dashboard/activity-card/activity-card.scss
+++ b/frontend/packages/console-shared/src/components/dashboard/activity-card/activity-card.scss
@@ -31,7 +31,7 @@
   padding-bottom: 0;
   padding: 0.75rem 0;
   h5 {
-    font-family: var(--pf-v5-global--FontFamily--sans-serif);
+    font-family: var(--pf-v5-global--FontFamily--text);
     font-size: var(--pf-v5-c-card__body--FontSize);
     margin: 0;
   }
