--- a/frontend/public/style/ancillary/_patternfly4.scss
+++ b/frontend/public/style/ancillary/_patternfly4.scss
@@ -49,5 +49,5 @@ optgroup,
 select,
 textarea,
 .pf-v5-c-badge {
-  font-family: var(--pf-v5-global--FontFamily--sans-serif);
+  font-family: var(--pf-v5-global--FontFamily--text);
 }
